--- a/README
+++ b/README
@@ -25,25 +25,10 @@ http://rmagick.rubyforge.org/install-faq.html
 
 == Install the plugin
 
-Installing the plugin as a submodule is as simple as issuing these commands from the
-root of your rails application directory:
+rails plugin install https://github.com/zendesk/captcha.git
+or 
+script/plugin install https://github.com/zendesk/captcha.git
 
-  To add as a submodule
-  
-  git submodule add git://github.com/zendesk/captcha.git
-  git submodule init
-  git submodule update
-
-  To update the submodule
-
-  git pull git://github.com/zendesk/captcha.git master
-  
-  Or clone and make your own changes
-
-  git clone git@github.com:zendesk/captcha.git
-
-Update: Using submodules is a headache to the extent where they're not really worth while.
-Go for script/plugin install instead for increased happiness.
 
 == Generate a bunch of images off-line
 
@@ -51,8 +36,9 @@ The reason why you don't need to generate images on the fly is that
 they have been generated in advance and all you do is pick one at 
 random. 
 
-First, define a salt for your application, do this by setting the global variable 
-CAPTCHA_SALT to a random string in e.g. your environment.rb
+If you have not used Rails' plugin install mechanism to install the plugin, 
+define a salt for your application (otherwise the plugin will take care of that). 
+Do this by setting the constant CAPTCHA_SALT to a random string in e.g. your environment.rb
   
    CAPTCHA_SALT = 'Something really random here'
 
@@ -61,7 +47,7 @@ Next, generate the images by running the following rake task, this takes a while
    rake captcha:generate COUNT=250
 
 This will create the '/public/system/captcha' directory if it doesn't
-already exist and put 250 randomly generated captcha images. 
+already exist and put 250 randomly generated captcha images in it.
 
 You can specify the following parameters when running the rake task:
 
@@ -69,7 +55,8 @@ COUNT          - the number of images to generate, default 3
 IMAGE_HEIGHT   - the height of the captcha image in pixels, default 50
 IMAGE_WIDTH    - the width of the captcha image in pixels, default 260
 CAPTCHA_LENGTH - the number of characters in the captcha, default 5
-FILE_FORMAT    - the file type of the captcha image (png or gif)
+FILE_FORMAT    - the file type of the captcha image (png or gif), default png
+FONT_SIZE      - the font size in points, default 44
 
 == Use the helper methods
 
